--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Capstone project",
+  "name": "Capstone",
   "version": "1.0.0",
   "description": "Capstone project",
   "main": "index.js",
@@ -13,6 +13,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "nodemon": "^2.0.7"
   },
