--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@react-google-maps/api": "^2.2.0",
     "axios": "^0.21.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
