--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Capstone project",
   "main": "index.js",
   "scripts": {
+    "test": "jest --detectOpenHandles --forceExit",
+    "test:dev": "npm run test -- --watch",
     "build": "webpack",
     "build:dev": "webpack --watch --mode=development",
     "start": "node ./server/server.js",
@@ -25,6 +27,7 @@
     "@babel/plugin-proposal-private-methods": "^7.13.0",
     "@babel/preset-react": "^7.13.13",
     "babel-loader": "^8.2.2",
+    "jest": "^26.6.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "webpack": "^5.37.0",
