updated travis yml file

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,7 @@
 language: node_js
 node_js:
   - 14.16.1
+services:
+  - postgresql
+before_script:
+  - psql -c 'create database dillon_panthers;' -U postgres
