--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@babel/plugin-proposal-class-properties": "^7.13.0",
     "@babel/plugin-proposal-private-methods": "^7.13.0",
     "@babel/preset-react": "^7.13.13",
+    "@material-ui/core": "^4.11.4",
     "babel-loader": "^8.2.2",
     "jest": "^26.6.3",
     "react": "^17.0.2",
