--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.17.1",
     "nodemon": "^2.0.7",
     "pg": "^8.6.0",
+    "react-router-dom": "^5.2.0",
     "sequelize": "^6.6.2"
   },
   "devDependencies": {
@@ -30,9 +31,14 @@
     "@babel/preset-react": "^7.13.13",
     "@material-ui/core": "^4.11.4",
     "babel-loader": "^8.2.2",
+    "css-loader": "^5.2.6",
     "jest": "^26.6.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "sass": "^1.34.0",
+    "sass-loader": "^11.1.1",
+    "sass-migrator": "^1.4.1",
+    "style-loader": "^2.0.0",
     "webpack": "^5.37.0",
     "webpack-cli": "^4.7.0"
   }
