--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "morgan": "^1.10.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-logger": "^3.0.6",
     "sass": "^1.34.0",
     "sass-loader": "^11.1.1",
     "sass-migrator": "^1.4.1",
