--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,7 @@
       "es6": true,
       "browser": true
     },
-    "extends": "eslint:recommended",
+    "extends": ["eslint:recommended","prettier"],
     "rules": {
       "dot-notation": 1,
       "valid-typeof": 2,
