--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "qs": "^6.10.1",
         "react-redux": "^7.2.4",
         "react-router-dom": "^5.2.0",
+        "react-spinners": "^0.11.0",
         "redux": "^4.1.0",
         "redux-thunk": "^2.3.0",
         "sequelize": "^6.6.2"
