--- a/babel.config.json
+++ b/babel.config.json
@@ -1,5 +1,5 @@
 {
-  "presets": ["@babel/preset-react"],
+  "presets": ["@babel/preset-react", "@babel/preset-env"],
   "plugins": [
     "@babel/plugin-proposal-private-methods",
     "@babel/plugin-proposal-class-properties"
