--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@babel/preset-env": "^7.14.4",
         "@react-google-maps/api": "^2.2.0",
         "axios": "^0.21.1",
         "bcrypt": "^5.0.1",
         "clsx": "^1.1.1",
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
+        "file-loader": "^6.2.0",
         "jsonwebtoken": "^8.5.1",
         "nodemon": "^2.0.7",
         "pg": "^8.6.0",
@@ -31,10 +33,11 @@
         "react-spinners": "^0.11.0",
         "redux": "^4.1.0",
         "redux-thunk": "^2.3.0",
-        "sequelize": "^6.6.2"
+        "sequelize": "^6.6.2",
+        "url-loader": "^4.1.1"
     },
     "devDependencies": {
-        "@babel/core": "^7.14.0",
+        "@babel/core": "^7.14.3",
         "@babel/plugin-proposal-class-properties": "^7.13.0",
         "@babel/plugin-proposal-private-methods": "^7.13.0",
         "@babel/preset-react": "^7.13.13",
