--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "axios": "^0.21.1",
         "bcrypt": "^5.0.1",
         "clsx": "^1.1.1",
+        "cors": "^2.8.5",
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
         "fastest-levenshtein": "^1.0.12",
