--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
         "redux": "^4.1.0",
         "redux-thunk": "^2.3.0",
         "sequelize": "^6.6.2",
+        "socket.io": "^4.1.2",
+        "socket.io-client": "^4.1.2",
         "url-loader": "^4.1.1"
     },
     "devDependencies": {
