--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "nodemon": "^2.0.7",
         "pg": "^8.6.0",
         "qs": "^6.10.1",
+        "react-icons": "^4.2.0",
         "react-redux": "^7.2.4",
         "react-router-dom": "^5.2.0",
         "react-spinners": "^0.11.0",
