guest version of secondary nav bar works

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "license": "ISC",
     "dependencies": {
         "@babel/preset-env": "^7.14.4",
+        "@material-ui/system": "^4.11.3",
         "@react-google-maps/api": "^2.2.0",
         "axios": "^0.21.1",
         "bcrypt": "^5.0.1",
