--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "license": "ISC",
     "dependencies": {
         "@babel/preset-env": "^7.14.4",
+        "@material-ui/lab": "^4.0.0-alpha.58",
         "@react-google-maps/api": "^2.2.0",
         "axios": "^0.21.1",
         "bcrypt": "^5.0.1",
