--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "clsx": "^1.1.1",
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
+        "faker": "^5.5.3",
         "fastest-levenshtein": "^1.0.12",
         "file-loader": "^6.2.0",
         "jsonwebtoken": "^8.5.1",
