--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
         "css-loader": "^5.2.6",
         "jest": "^26.6.3",
         "react": "^17.0.2",
+        "react-copy-to-clipboard": "^5.0.3",
         "react-dom": "^17.0.2",
         "sass": "^1.34.0",
         "sass-loader": "^11.1.1",
